# warehouse_automation

./: .gitignore  LICENSE  README.md  flake.nix  justfile
bag/: bag_display.py  camera_to_video.py  plot_simulation.py
experiments/: plot_simulation.py
models/: warehouse_automation.pro
src/: id_handler.py  main.py  mobile_bot.py  robot.py  task_transmitter.py
src/wa_bringup/: package.xml  setup.cfg  setup.py
src/wa_bringup/launch/: manual_navigation.launch.py  simulation.launch.py  slam.launch.py
src/wa_bringup/rviz/: mobilebot_1.rviz
src/wa_bringup/wa_bringup/: box_spawner.py
src/wa_environment/: package.xml  setup.cfg  setup.py
src/wa_environment/launch/: husky_description.launch.py
src/wa_environment/maps/: map.pgm  map.yaml
src/wa_environment/models/aws_robomaker_warehouse_DeskC_01/meshes/: aws_robomaker_warehouse_DeskC_01_collision.DAE
src/wa_environment/models/conveyor_belt/: model.config  model.sdf
src/wa_environment/models/conveyor_belt/meshes/: conveyor_belt.dae
src/wa_environment/models/mobilebot/: model.config  model.sdf
src/wa_environment/models/mobilebot/meshes/: mobilebot_base.dae
src/wa_environment/models/product_box/: model.config  model.sdf
src/wa_environment/models/storage_unit/: model.config  model.sdf
src/wa_environment/models/warehouse_ground/: model.config  model.sdf
src/wa_environment/models/warehouse_ground/materials/scripts/: warehouse_ground.material
src/wa_environment/params/: nav2_params_all.yaml
src/wa_environment/robots/: mobilebot.urdf
src/wa_environment/worlds/: empty.world  warehouse.world
src/wa_gazebo/: package.xml  setup.cfg  setup.py
src/wa_gazebo/wa_gazebo/: actions.py  bridge.py  gazebo_bridge.py  model_parser.py  queues.py
src/wa_gazebo_model_attach/: .rosinstall  CMakeLists.txt  package.xml  setup.py
src/wa_gazebo_model_attach/include/wa_gazebo_model_attach/: wa_gazebo_model_attach.h
src/wa_gazebo_model_attach/src/: wa_gazebo_model_attach.cpp
src/wa_gazebo_model_attach/src/wa_gazebo_model_attach/: gazebo_client.py
src/wa_interfaces/: CMakeLists.txt  package.xml
src/wa_interfaces/msg/: Activate.msg  Demand.msg  Model.msg  Task.msg
src/wa_interfaces/srv/: Attach.srv  BoxOrder.srv  BoxSend.srv  BoxTransfer.srv  Destroy.srv  Detach.srv  RegisterSupervisor.srv  Spawn.srv  TaskConfirmation.srv  ToggleAttach.srv
src/wa_task_transmitter/: package.xml  setup.cfg  setup.py
src/wa_task_transmitter/src/: conveyor_belt.py  entity.py  mobile_bot.py  robot.py  task_queue.py  task_stats.py  task_transmitter.py  uids.py  variable_timer.py
src/wa_warehouse_control/: package.xml  setup.cfg  setup.py
src/wa_warehouse_control/wa_warehouse_control/: conveyor_belt.py  demand_generator.py  husky_navigator.py  mobile_bot.py  mobilebot.py  task_stats.py  task_transmitter.py
src/wa_warehouse_control/wa_warehouse_control/automaton/: automaton.py  state_machines.py
src/wa_warehouse_control/wa_warehouse_control/sct/: automaton.py  models.py  parse_destool_project.py  plant_node.py  supervisor_node.py
src/wa_warehouse_control/wa_warehouse_control/utils/: entity.py  map.py  navigator.py  robot.py
