<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wa_task_transmitter</name>
  <version>1.0.0</version>
  <description>Transmits tasks for Warehouse Automation project</description>
  <maintainer email="eduardo.farinati@ufrgs.br">skylab</maintainer>
  <license>MIT</license>

  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <build_depend>builtin_interfaces</build_depend> -->
  <build_depend>std_msgs</build_depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <exec_depend>builtin_interfaces</exec_depend> -->
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Add a build and exec dependency -->
  <depend>wa_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
